styles/global/header.css
@import url('variables.css');

.main-header {
	position: sticky;
	z-index: 1000;
	top: 0vh;
	background-color: var(--color-violet-darkest);
	height: 80px;
	width: 100%;
	display: flex;
	font-family: var(--font-family);
}

h1 {
	width: 35%;
	max-width: 140px;
	height: 100%;
	display: inline-block;
}

h1 img {
	height: 100%;
	width: 100%;
	min-width: 150px;
	padding: 0 20px;
}

.header-nav {
	margin: auto;
	margin-right: 0;
	padding: 0 20px;
	height: 100%;
	display: inline-block;
}

.menu-button {
	position: absolute;
	right: 25px;
	top: 0px;
	bottom: 0px;
	background-color: transparent;
	color: var(--color-white);
	border: none;
	cursor: pointer;
	height: 100%;
	width: 30px;
	background-size: contain;
	background-position: center;
	background-repeat: no-repeat;
}

.open-menu-button {
	background-image: url('../../assets/icons/open-menu.svg');
}

.close-menu-button {
	background-image: url('../../assets/icons/close-menu.svg');
}

.menu-button span {
	font-size: 2.2rem;
}

.header-nav ul {
	display: flex;
	padding: 1rem;
	flex-direction: column;
	align-items: left;
	gap: 24px;
	width: 80%;
	background-color: var(--color-violet-darkest);
	position: absolute;
	right: 0;
	top: 80px;
	border: 1px solid white;
	border-top: none;
	border-right: none;
	transition: opacity 300ms ease-in-out;
	opacity: 1;
	height: 100vh;
}

.header-nav ul.hidden {
	display: none;
}

.header-nav ul.view-menu {
	animation: menu-to-left 200ms;
	z-index: 100;
}

@keyframes menu-to-left {
	from {
		transform: translateX(100vh);
	}

	to {
		transform: translateX(0);
	}
}

.header-nav ul.close-menu {
	animation: menu-to-right 400ms forwards;
}

@keyframes menu-to-right {
	from {
		transform: translateX(0vh);
	}

	to {
		transform: translateX(100vh);
	}
}

.header-nav ul li.profile-item a {
	display: flex;
	align-items: center;
	justify-content: left;
}

.header-nav ul li.profile-item span {
	text-align: center;
}

.header-nav ul li.search-item {
	order: -1;
}

.header-nav ul li {
	font-size: 1rem;
	font-weight: bold;
	min-height: 30px;
}

.header-nav ul li:hover {
	text-decoration: underline;
	text-underline-offset: 4px;
}

.header-nav ul li a {
	text-decoration: none;
	color: var(--color-white);
	font-size: 1rem;
}

svg {
	width: 30px;
	height: 30px;
	margin-left: 5px;
}

svg path {
	stroke: #ffffff;
}

.header-nav ul li.logout-item:hover svg path {
	stroke: var(--color-red);
}

.header-nav ul li.logout-item span {
	position: relative;
	bottom: 8px;
}

.header-nav ul li.logout-item:hover span {
	text-decoration: underline;
	text-underline-offset: 4px;
}

.header-nav ul li.logout-item a {
	display: inline-block;
	width: 100%;
	height: 100%;
	vertical-align: middle;
}

.header-nav ul li form input {
	position: relative;
	height: 2rem;
	font-size: 0.8rem;
	width: 100%;
	color: var(--color-white);
	border: 2px solid var(--color-violet-light-white);
	padding-right: 0;
}

.header-nav ul li form input::placeholder {
	color: var(--color-grey-light);
}

@media (min-width: 600px) {
	.header-nav ul {
		width: 50%;
	}
}

@media (min-width: 900px) {
	.header-nav ul {
		width: auto;
	}

	.menu-button {
		display: none;
		position: absolute;
	}

	.header-nav ul {
		position: static;
		display: flex;
		background-color: transparent;
		top: 0;
		right: 0;
		display: flex;
		flex-direction: row;
		height: 100%;
		align-items: center;
		justify-content: flex-end;
		gap: 1.5rem;
		border: none;
	}

	.header-nav ul.hidden {
		display: flex;
		top: 80px;
		opacity: 1;
	}

	.header-nav ul li {
		display: initial;
		min-height: auto;
	}

	.header-nav ul li a {
		font-size: 0.95rem;
	}

	.header-nav ul.hidden li {
		display: initial;
		min-height: auto;
	}

	.header-nav ul li.search-item {
		order: initial;
	}

	.header-nav ul li span {
		font-size: 0.9rem;
	}

	.header-nav ul li.logout-item span {
		display: none;
	}

	.header-nav ul li.profile-item a {
		justify-content: center;
	}

	.header-nav ul li.profile-item span {
		text-align: center;
		margin-left: 5px;
	}

	.header-nav ul li form input {
		width: 240px;
	}
}

@media (min-width: 1250px) {
	form input {
		width: 250px;
	}

	h1 img {
		min-width: 160px;
	}
}

